<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login"

            android:alpha="0.6"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:gravity="center">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/empcode"
                    android:maxLength="12"
                    android:hint="@string/hint_employee_id"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:background="@drawable/rounded"
                    android:layout_margin="20dp"
                    android:padding="15dp"/>

                <EditText
                    android:maxLength="16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/signup_password"
                    android:inputType="textPassword"
                    android:hint="@string/hintpassword"
                    android:imeOptions="actionDone"
                    android:background="@drawable/rounded"
                    android:layout_margin="20dp"
                    android:padding="15dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_button"
                    android:padding="10dp"
                    android:layout_margin="20dp"
                    android:background="#28A9E2"
                    android:text="Login"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/signup_string"
                    android:textColor="#FFFFFF"
                    android:gravity="center"
                    android:id="@+id/signup_text"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:fontFamily="@font/font1"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/unlock_with_fingerprint"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:id="@+id/fingerprint"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/font1"/>

                <ImageView
                    android:id="@+id/fingerPrintImage"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_action_fingerprint"
                    android:tint="#ffffff"
                    android:layout_above="@id/fingerprint"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"/>
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>